# wctx

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  install.sh  wctx.service
.github/workflows/: aur_package.yml
src/: daemon.rs  main.rs  query.rs  types.rs
src/daemon/: debouncer.rs  providers.rs  service.rs
src/daemon/providers/: gnome.rs  kwin.rs  x11.rs
src/daemon/providers/assets/gnome/: extension.js  metadata.json
src/daemon/providers/assets/kwin/: kwin.js
