[package]
name = "wctx"
description = "Real-time window context info for Wayland and X11"
version = "1.0.0"
authors = ["Saul Fautley <saulfautley@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/slightlyfaulty/wctx"
edition = "2021"

[profile.release]
panic = "abort"
lto = "fat"
strip = true
codegen-units = 1

[dependencies]
anyhow = "1.0.96"
clap = { version = "4.5.30", features = ["derive"] }
color-print = "0.3.7"
colored_json = "5.0.0"
csv = "1.3.1"
futures-lite = "2.6.0"
serde = "1.0.218"
serde_json = "1.0.139"
strum = { version = "0.27.1", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.20"
x11rb = { version = "0.13.1", features = ["randr"] }
x11rb-async = { version = "0.13.1", features = ["randr"] }
zbus = "5.5.0"
dirs = "6.0.0"

[build-dependencies]
better-minify-js = "0.7.0"
